# python-cli

./: LICENSE  README.md  pyproject.toml
.cache/: coordinates_cache.json
cli_max/cli/: __init__.py
python_cli/cli/: __init__.py  __main__.py
python_cli/lib/: funny_name_generator.py
python_cli/lib/weather/: __init__.py  plotter.py  wttr.py  yr.py
