[tool.poetry]
name = "python_cli"
version = "0.1.0"
description = "This is a demo cli application"
authors = ["Fredrik Hoem Grelland <fhg@aztek.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
requests = "^2.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'python_cli.cli:app'
